fix: made alignment better

--- a/frontend/themes/comparator/styles.css
+++ b/frontend/themes/comparator/styles.css
@@ -1,6 +1,5 @@
 vaadin-text-field {
     width: 500px;
-    margin-left: 20px;
     font-size: 12px;
 }
 
